@@ -13,6 +13,9 @@ not yet  BJH  Release 10.65.00
               In particular, if the image or page is square, image will always
               be in portrait (not rotated).
 
+              pnmtops: Fix crash with 12 bits per sample.  Introduced in 10.53
+              (December 2010).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.
+
               pnmtops: Fix bug: wrong output with -ascii85.  Introduced in
               10.63 (June 2013).
 
